--- a/source/_posts/2024-07-25-為什麼-Leetcode-第-2667-題很重要.md
+++ b/source/_posts/2024-07-25-為什麼-Leetcode-第-2667-題很重要.md
@@ -31,7 +31,7 @@ category: 'Translate'
 ---
 
 ### 正文開始
-**為什麼 Leetcode 第 2667 題很重要?**
+**為什麼 Leetcode 第 2667 題很重要？**
 我們在解題的時候會發現本題真的非常簡單，但為什麼 Leetcode 要 po 這題？
 因為這題使用了一個大多面試都會詢問的重要概念 —— 閉包(Closure)。
 
